@@ -10,7 +10,7 @@ EBUILD mplayer-uau-1.0_rc4_p20100822.ebuild 23583 RMD160 2d0df508d912e7587fe61b8
 EBUILD mplayer-uau-1.0_rc4_p20101126.ebuild 23645 RMD160 64e49ca062db2b32e82944bda06fb26b6be8c7cb SHA1 274ec552e1652eff2a01f124f74774be2042d8d1 SHA256 9952bbfedab8df63547ab0ca0a0df214fa56015297a8ade25aa53955968578dc
 EBUILD mplayer-uau-1.0_rc4_p20101220.ebuild 23441 RMD160 a098eed6bc656e1e15978aa61f5558a126e5c5f0 SHA1 41491e9796ba2d6b963de169a1ea67b1f2e8cae5 SHA256 fc0c1c31eb208d848891e6eb35847022c13b32350910018a0a8147643e73e669
 EBUILD mplayer-uau-1.0_rc4_p20110126.ebuild 23254 RMD160 db5bedfd5fb51699259668ad4c92dcbd5de8087a SHA1 3c8341d18ed310e976b4661ba50e25a35edff461 SHA256 ef49cc0be1d84eb6a77438956d43123c1c9ac1c12a019a4ed89308a1536eb9b7
-EBUILD mplayer-uau-2.0_beta1.ebuild 22416 RMD160 8fe6cb20c54a094b74778493b5a004576ce09fbe SHA1 0053dd2f83797d0a40963fa13a446d4979e6793e SHA256 00ebcc46d323b017c26d6c527e077d4cff990f25312a337eaef6e60fc3a45491
-EBUILD mplayer-uau-9999.ebuild 22378 RMD160 da44d168afd7a6ae9c1e7c78c61eef20ef598132 SHA1 57a8c5c57d257c6c4622f1c15424780cc53f69b5 SHA256 1a0719fb59ceea5598607188ede561186c21f7a38b1fbdf99d75c0423d352ea0
-MISC ChangeLog 2309 RMD160 8f07e10f29f1836cba34eb94c3ec317547b6a8ab SHA1 e5d113e32455584e0e192fa45531e4eb39ca34e6 SHA256 4526cfb8a5b22c9f77540f4a77d2e2da666c34c473c0086673484c238943b25e
+EBUILD mplayer-uau-2.0_beta1.ebuild 22299 RMD160 c8c2218a0fd9d604765675e723b19d7f24a9d3ab SHA1 27b2747fdde7505903343804aae1e69c11171c77 SHA256 e60d1e5f1ac15a1ae513577e1f7bb5d080e355259f4c80692f2bc8bf8c243436
+EBUILD mplayer-uau-9999.ebuild 22342 RMD160 99b92c143e7bb49da03194b4e8b2744620424383 SHA1 2d645e569c9aaf3270071df75a73b064b6534a3f SHA256 53ad1b8c133f476993594f56f86040ec75819a880673595cdab8e19d8bbd4d78
+MISC ChangeLog 2438 RMD160 8c0baa097d920aa040f327caa7d019e83f37ad7f SHA1 a2ebfd5ee32b01bf019bbf63be0e802347f85bde SHA256 0c00e490e72f9d6e1e5bd4058fd94504b03b08b0c983dd9d235e44186e100f53
 MISC metadata.xml 4858 RMD160 10a74e1afcba1c573e6cb16d32b553c981d8fc1f SHA1 7624093b0e514d8f7dac620071e2bdeec0eb1949 SHA256 eab3c615438c75a8636d34aeddcdefaf781b3d2db0edf01f2a5053ab595f87e5
