@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  16 Feb 2011; Nikoli <nikoli@lavabit.com> mplayer-uau-2.0_beta1.ebuild,
+  mplayer-uau-9999.ebuild:
+  fix libass dep, cosmetics
+
 *mplayer-uau-2.0_beta1 (15 Feb 2011)
 
   15 Feb 2011; Nikoli <nikoli@lavabit.com> +mplayer-uau-2.0_beta1.ebuild,
